# envArchitect

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  env-dev  env.toml  package-lock.json  package.json  tsconfig.json
.agent/rules/: architect.md  guardian.md  index.md  plugin.md  project.md  research.md  rust.md
.agent/workflows/: dev.md  new_plugin.md  release.md  test_stress.md
.github/: FUNDING.yml
apps/api/: package.json
apps/cli/: Cargo.toml
apps/cli/src/: constants.rs  keys.rs  main.rs
apps/cli/src/adapters/: mod.rs
apps/cli/src/adapters/rust/: build.rs  metadata.rs  mod.rs
apps/cli/src/adapters/ts/: build.rs  metadata.rs  mod.rs  scaffold.rs
apps/cli/src/commands/: bundle.rs  dev.rs  doctor.rs  init.rs  login.rs  mod.rs  publish.rs  resolve.rs  run.rs  shell.rs  shim.rs  whoami.rs
apps/cli/src/core/: error.rs  executor.rs  global_store.rs  mod.rs  virtual_manifest.rs
apps/cli/src/host/: mod.rs  state.rs  ui.rs
apps/cli/src/services/: bundle.rs
apps/cli/src/ui/: beauty.rs  diagnostic.rs  mod.rs  theme.rs
apps/cli/src/ui/components/: mod.rs  prompt.rs  spinner.rs
apps/cli/src/utils/: auth.rs  loader.rs
apps/docs/: package.json
apps/lsp-server/: Cargo.toml
apps/lsp-server/src/: main.rs
apps/notary-worker/: Cargo.toml
apps/notary-worker/src/: main.rs
apps/registry-api/: Cargo.toml
apps/registry-api/src/: main.rs
apps/registry-api/src/routes/: auth.rs  publish.rs
apps/web/: package.json
apps/web/app/auth/portal/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/worker/: package.json
examples/conflict_test/: component.wasm  env.json  env.toml  package.json
examples/conflict_test/.architect/shims/: node
examples/feature-stress-plugin/: Cargo.toml  env.json
examples/feature-stress-plugin/src/: lib.rs
examples/node-ts-plugin/: package-lock.json  package.json  tsconfig.json
examples/node-ts-plugin/scripts/: build.mjs
examples/node-ts-plugin/src/: index.ts
examples/node-ts-plugin/wit/: plugin.wit
examples/node-ts-reimpl/: env.json  package-lock.json  package.json
examples/node-ts-reimpl/src/: index.ts
examples/simple-plugin/: Cargo.toml  env.json
examples/simple-plugin/src/: bindings.rs  lib.rs
scripts/: dev-cli-watch.sh  dev_all.sh
storage/: 36c2630b-9965-41c8-9355-d467017df60e.wasm  42054b22-8e86-4dbf-afe0-c5f17d9cd937.sbom.json
