[workspace]
resolver = "2"
members = [
    "apps/cli",
    "apps/lsp-server",
    "apps/notary-worker",
    "apps/registry-api",
    "packages/database",
    "packages/env-architect",
    "packages/env-architect/crates/*",
]

[workspace.package]
version = "0.1.0"
authors = ["athexweb3 <athexweb3@gmail.com>"]
repository = "https://github.com/athexweb3/envArchitect"
homepage = "https://github.com/athexweb3/envArchitect"
edition = "2021"
license = "MIT"

[workspace.dependencies]
env-architect = { path = "packages/env-architect" }
# Internal crate links for the facade to work
domain = { path = "packages/env-architect/crates/domain" }
infrastructure = { path = "packages/env-architect/crates/infrastructure" }
application = { path = "packages/env-architect/crates/application" }

anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
dialoguer = "0.11"
indicatif = "0.17"
comfy-table = "7.1"
which = "6.0"
axum = "0.7"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "time",
] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sigstore = "0.8" # For future phase
petgraph = "0.6" # For dependency engine
dotenv = "0.15"
