[package]
name = "env-architect-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
default-run = "env-architect"

[[bin]]
name = "env-architect"
path = "src/main.rs"

[dependencies]
# The FACADE dependency
env-architect = { path = "../../packages/env-architect" }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
