[package]
name = "env-architect-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
default-run = "env-architect"

[[bin]]
name = "env-architect"
path = "src/main.rs"

[dependencies]
# The FACADE dependency
env-architect = { workspace = true }
env-manifest = { path = "../../packages/manifest" }

# Application layer (Brain Integration)
application = { path = "../../packages/env-architect/crates/application" }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
console = "0.15"
# inquire = "0.7"
# indicatif = { workspace = true }
# owo-colors = "4.0"
# termimad = "0.20"
# comfy-table = { workspace = true }
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
# ratatui = "0.26"
url = "2.5"

# WASM Host Runtime
wasmtime = "26.0"
wasmtime-wasi = "26.0"
wasmtime-wasi-http = "26.0"
wit-bindgen = { version = "0.41.0", features = ["realloc"] }
async-trait = "0.1"
serde_json = { workspace = true }

notify = "6.1"
cliclack = "0.3.7"
semver = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "../../packages/env-architect/crates/domain" }
regex = "1.12.2"
serde = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
hex = "0.4"
open = "5.3"
keyring = "3.0"
shared = { path = "../../packages/server/shared" }
database = { path = "../../packages/server/database" }
oci-client = { version = "0.13", default-features = false, features = [
    "rustls-tls",
] }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
toml = { workspace = true }
serde_yaml = "0.9"
tracing = "0.1"
