[package]
name = "lsp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# LSP Framework
tower-lsp = "0.20"
tokio = { workspace = true, features = ["io-std", "rt-multi-thread"] }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
