[package]
name = "lsp-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# LSP Framework
tower-lsp = "0.20"
tokio = { workspace = true, features = ["io-std", "rt-multi-thread"] }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
