[package]
name = "notary-worker"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace
database = { workspace = true }

# System
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
# sigstore = "0.8" # Will rely on workspace later
