[package]
name = "feature-stress-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
env-architect-sdk = { path = "../../packages/sdks/rust/sdk" }
anyhow = "1.0"
serde_json = "1.0"
wit-bindgen = { version = "0.36.0", features = ["realloc"] }
shlex = "0.1.1"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
