[package]
name = "simple-plugin"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
env-architect-sdk = { path = "../../packages/sdks/rust/sdk" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
wit-bindgen = { version = "0.36.0", features = ["realloc"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
